--- a/superpet/templates/index.html
+++ b/superpet/templates/index.html
@@ -73,7 +73,7 @@
   <!-- Navbar End -->
   <!-- ------------------------------------------------------------------------------------ -->
   <section class="container-fluid">
-
+    <h1>Name:{{name}}</h1>
     <!-- ------------------------------------------------------------------------------------ -->
     <!--Poster Image start -->
     <!-- ------------------------------------------------------------------------------------ -->
