--- a/superpet/templates/navbar.html
+++ b/superpet/templates/navbar.html
@@ -46,5 +46,6 @@
   <!-- Navbar End -->
   <!-- ------------------------------------------------------------------------------------ -->
   <section class="container-fluid">
+    <h1>Name:{{name}}</h1>
 
    
