--- a/superpet/products/templates/category/categorydetail.html
+++ b/superpet/products/templates/category/categorydetail.html
@@ -1,10 +1,18 @@
 {% extends "base.html" %}
 
 {% block content %}
-
+<div class = "container w-50 m-3">
+<div class="list-group">
+    {% for category in categories %}
+    <a href="{% url 'category-detail' category.category_slug %}" class="list-group-item list-group-item-action bg-dark text-warning" aria-current="true">
+        {{category.category_name}}
+    </a>
+    {% endfor %}
+  </div>
+</div>
     <p>{{category_obj}}</p>
     <div class="row row-cols-1 row-cols-md-2 g-4">
-        {% for product in category_obj.product_set.all %}
+        {% for product in category_obj.product_set.all %}   
             {% include "card.html" with p=product %}
         {% endfor %}
 
