--- a/superpet/products/templates/products/productdetail.html
+++ b/superpet/products/templates/products/productdetail.html
@@ -1,7 +1,26 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    {% comment %} <p>{{product}}</p> {% endcomment %}
-
+    <div class="container">
+    <!-- <p>{{product}}</p>  -->
     {% include "card.html" with p=product %}
+    `</div>  
+    <!-- {{products}} {{name}} -->
+
+    <div class="row row-cols-1 row-cols-md-4 g-4">
+        {% for p in products %}
+        <div class="col">
+          <div class="card">
+            <a href="{% url 'product-details' p.id %}">
+            <img src="{{p.product_image.url}}" class="card-img-top" alt="...">
+            </a>
+            <div class="card-body">
+              <h5 class="card-title">{{p.product_name}}</h5>
+              <p class="card-text">{{p.category.category_name}}</p>
+            </div>
+          </div>
+        </div> 
+        {% endfor %}
+          </div>
+    
 {% endblock content %} 
