--- a/superpet/templates/profile.html
+++ b/superpet/templates/profile.html
@@ -1,4 +1,16 @@
 {% extends "base.html" %}
-{% block context %}
+{% block content %}
     {{request.user}}
+    
+    {% if message %}
+        <div class="alert alert-success" role="alert">
+            {{message}}
+        </div>  
+    {% endif %}
+
+    <form action="" method="POST">
+        {% csrf_token %}
+        {{form}}
+        <input type="submit" value="update">
+    </form>
 {% endblock %}
