--- a/superpet/templates/navbar.html
+++ b/superpet/templates/navbar.html
@@ -52,6 +52,6 @@
   <!-- Navbar End -->
   <!-- ------------------------------------------------------------------------------------ -->
   <section class="container-fluid">
-    
+    <!-- <h1>Name:{{name}}</h1> -->
 
    
